; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/common/extr_menu_pico.c_key_config_loop_wrap.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/common/extr_menu_pico.c_key_config_loop_wrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@me_ctrl_actions = common dso_local global i32 0, align 4
@emuctrl_actions = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @key_config_loop_wrap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @key_config_loop_wrap(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %24 [
    i32 129, label %6
    i32 128, label %12
    i32 130, label %18
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* @me_ctrl_actions, align 4
  %8 = load i32, i32* @me_ctrl_actions, align 4
  %9 = call i32 @array_size(i32 %8)
  %10 = sub nsw i32 %9, 1
  %11 = call i32 @key_config_loop(i32 %7, i32 %10, i32 0)
  br label %25

12:                                               ; preds = %2
  %13 = load i32, i32* @me_ctrl_actions, align 4
  %14 = load i32, i32* @me_ctrl_actions, align 4
  %15 = call i32 @array_size(i32 %14)
  %16 = sub nsw i32 %15, 1
  %17 = call i32 @key_config_loop(i32 %13, i32 %16, i32 1)
  br label %25

18:                                               ; preds = %2
  %19 = load i32, i32* @emuctrl_actions, align 4
  %20 = load i32, i32* @emuctrl_actions, align 4
  %21 = call i32 @array_size(i32 %20)
  %22 = sub nsw i32 %21, 1
  %23 = call i32 @key_config_loop(i32 %19, i32 %22, i32 -1)
  br label %25

24:                                               ; preds = %2
  br label %25

25:                                               ; preds = %24, %18, %12, %6
  ret i32 0
}

declare dso_local i32 @key_config_loop(i32, i32, i32) #1

declare dso_local i32 @array_size(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
